// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<div>
  <div
    class="ui basic segment ui container stackable grid"
  >
    <div
      class="left aligned eight wide column"
    >
      <h1
        class="ui header"
      >
        Your Studies
      </h1>
    </div>
    <div
      class="right aligned eight wide column"
    >
      <div
        class="ui mini left icon input pr-5"
      >
        <input
          placeholder="Search by Study Name"
          type="text"
          value=""
        />
        <i
          aria-hidden="true"
          class="search icon"
        />
      </div>
      <div
        class="ui mini buttons"
      >
        <button
          class="ui icon primary button"
          tabindex="0"
        >
          <i
            aria-hidden="true"
            class="grid layout icon"
          />
        </button>
        <button
          class="ui icon button"
          tabindex="0"
        >
          <i
            aria-hidden="true"
            class="list icon"
          />
        </button>
      </div>
    </div>
    <div
      class="row"
    >
      <div
        class="column"
      >
        <div
          class="ui stackable four cards"
        >
          <div
            class="ui red card"
            to="/study/SD_8WX8QQ06/documents"
          >
            <div
              class="ui mini right corner label"
            >
              <i
                aria-hidden="true"
                class="red exclamation mini icon"
              />
            </div>
            <a
              class="content"
              href="/study/SD_8WX8QQ06/basic-info/info"
            >
              <div
                class="header"
              >
                benchmark extensible e-business
              </div>
              <div
                class="meta"
              >
                SD_8WX8QQ06
              </div>
            </a>
            <div
              class="extra content"
              compact="very"
            >
              <a
                class="pr-5"
                href="/study/SD_8WX8QQ06/basic-info/info"
              >
                <i
                  aria-hidden="true"
                  class="grey clipboard check icon"
                />
                Info
              </a>
              <a
                class="pr-5"
                href="/study/SD_8WX8QQ06/documents"
              >
                <i
                  aria-hidden="true"
                  class="grey file icon"
                />
                1
                 Files
              </a>
              <a
                href="/study/SD_8WX8QQ06/cavatica"
              >
                <i
                  aria-hidden="true"
                  class="red code branch icon"
                />
                0
                 projects
              </a>
              <div
                class="ui label ui mini basic icon right floated button"
                role="button"
              >
                <i
                  aria-hidden="true"
                  class="chevron down icon"
                />
              </div>
            </div>
          </div>
          <div
            class="ui red card"
            to="/study/SD_I1L92W57/documents"
          >
            <div
              class="ui mini right corner label"
            >
              <i
                aria-hidden="true"
                class="red exclamation mini icon"
              />
            </div>
            <a
              class="content"
              href="/study/SD_I1L92W57/basic-info/info"
            >
              <div
                class="header"
              >
                visualize dynamic users
              </div>
              <div
                class="meta"
              >
                SD_I1L92W57
              </div>
            </a>
            <div
              class="extra content"
              compact="very"
            >
              <a
                class="pr-5"
                href="/study/SD_I1L92W57/basic-info/info"
              >
                <i
                  aria-hidden="true"
                  class="grey clipboard check icon"
                />
                Info
              </a>
              <a
                class="pr-5"
                href="/study/SD_I1L92W57/documents"
              >
                <i
                  aria-hidden="true"
                  class="red file icon"
                />
                0
                 Files
              </a>
              <a
                href="/study/SD_I1L92W57/cavatica"
              >
                <i
                  aria-hidden="true"
                  class="red code branch icon"
                />
                0
                 projects
              </a>
              <div
                class="ui label ui mini basic icon right floated button"
                role="button"
              >
                <i
                  aria-hidden="true"
                  class="chevron down icon"
                />
              </div>
            </div>
          </div>
          <div
            class="ui red card"
            to="/study/SD_SG5N41K8/documents"
          >
            <div
              class="ui mini right corner label"
            >
              <i
                aria-hidden="true"
                class="red exclamation mini icon"
              />
            </div>
            <a
              class="content"
              href="/study/SD_SG5N41K8/basic-info/info"
            >
              <div
                class="header"
              >
                strategize cross-media markets
              </div>
              <div
                class="meta"
              >
                SD_SG5N41K8
              </div>
            </a>
            <div
              class="extra content"
              compact="very"
            >
              <a
                class="pr-5"
                href="/study/SD_SG5N41K8/basic-info/info"
              >
                <i
                  aria-hidden="true"
                  class="grey clipboard check icon"
                />
                Info
              </a>
              <a
                class="pr-5"
                href="/study/SD_SG5N41K8/documents"
              >
                <i
                  aria-hidden="true"
                  class="red file icon"
                />
                0
                 Files
              </a>
              <a
                href="/study/SD_SG5N41K8/cavatica"
              >
                <i
                  aria-hidden="true"
                  class="red code branch icon"
                />
                0
                 projects
              </a>
              <div
                class="ui label ui mini basic icon right floated button"
                role="button"
              >
                <i
                  aria-hidden="true"
                  class="chevron down icon"
                />
              </div>
            </div>
          </div>
          <div
            class="ui card"
            to="/study/SD_0YYP5ZEN/documents"
          >
            <a
              class="content"
              href="/study/SD_0YYP5ZEN/basic-info/info"
            >
              <div
                class="header"
              >
                drive distributed architectures
              </div>
              <div
                class="meta"
              >
                SD_0YYP5ZEN
              </div>
            </a>
            <div
              class="extra content"
              compact="very"
            >
              <a
                class="pr-5"
                href="/study/SD_0YYP5ZEN/basic-info/info"
              >
                <i
                  aria-hidden="true"
                  class="grey clipboard check icon"
                />
                Info
              </a>
              <a
                class="pr-5"
                href="/study/SD_0YYP5ZEN/documents"
              >
                <i
                  aria-hidden="true"
                  class="red file icon"
                />
                0
                 Files
              </a>
              <a
                href="/study/SD_0YYP5ZEN/cavatica"
              >
                <i
                  aria-hidden="true"
                  class="grey code branch icon"
                />
                2
                 projects
              </a>
              <div
                class="ui label ui mini basic icon right floated button"
                role="button"
              >
                <i
                  aria-hidden="true"
                  class="chevron down icon"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders empty state 1`] = `
<div>
  <div
    class="ui basic segment ui container stackable grid"
  >
    <div
      class="left aligned eight wide column"
    >
      <h1
        class="ui header"
      >
        Your Studies
      </h1>
    </div>
    <div
      class="right aligned eight wide column"
    >
      <div
        class="ui mini left icon input pr-5"
      >
        <input
          placeholder="Search by Study Name"
          type="text"
          value=""
        />
        <i
          aria-hidden="true"
          class="search icon"
        />
      </div>
      <div
        class="ui mini buttons"
      >
        <button
          class="ui icon primary button"
          tabindex="0"
        >
          <i
            aria-hidden="true"
            class="grid layout icon"
          />
        </button>
        <button
          class="ui icon button"
          tabindex="0"
        >
          <i
            aria-hidden="true"
            class="list icon"
          />
        </button>
      </div>
    </div>
    <div
      class="row"
    >
      <div
        class="column"
      >
        <h4
          class="ui disabled center aligned header"
        >
          No Studies matching your search term. Try searching by Study Name
        </h4>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders loading state 1`] = `
<div>
  <div
    class="ui basic segment ui container"
  >
    <div
      class="ui basic segment ui container"
    >
      <div
        class="ui placeholder"
      >
        <div
          class="header"
        >
          <div
            class="line"
          />
        </div>
      </div>
    </div>
    <div
      class="ui stackable four cards"
    >
      <div
        class="ui card"
      >
        <div
          class="content"
        >
          <div
            class="ui placeholder"
          >
            <div
              class="header"
            >
              <div
                class="line"
              />
            </div>
            <div
              class="paragraph"
            >
              <div
                class="line long"
              />
            </div>
          </div>
        </div>
        <div
          class="extra content"
        >
          <div
            class="ui placeholder"
          >
            <div
              class="paragraph"
            >
              <div
                class="line short"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="ui card"
      >
        <div
          class="content"
        >
          <div
            class="ui placeholder"
          >
            <div
              class="header"
            >
              <div
                class="line"
              />
            </div>
            <div
              class="paragraph"
            >
              <div
                class="line long"
              />
            </div>
          </div>
        </div>
        <div
          class="extra content"
        >
          <div
            class="ui placeholder"
          >
            <div
              class="paragraph"
            >
              <div
                class="line short"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="ui card"
      >
        <div
          class="content"
        >
          <div
            class="ui placeholder"
          >
            <div
              class="header"
            >
              <div
                class="line"
              />
            </div>
            <div
              class="paragraph"
            >
              <div
                class="line long"
              />
            </div>
          </div>
        </div>
        <div
          class="extra content"
        >
          <div
            class="ui placeholder"
          >
            <div
              class="paragraph"
            >
              <div
                class="line short"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="ui card"
      >
        <div
          class="content"
        >
          <div
            class="ui placeholder"
          >
            <div
              class="header"
            >
              <div
                class="line"
              />
            </div>
            <div
              class="paragraph"
            >
              <div
                class="line long"
              />
            </div>
          </div>
        </div>
        <div
          class="extra content"
        >
          <div
            class="ui placeholder"
          >
            <div
              class="paragraph"
            >
              <div
                class="line short"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
